Hike list avoids column wrapping between headers and first hike in a category

--- a/source/style.css
+++ b/source/style.css
@@ -92,11 +92,11 @@ a:link, a:visited {
 .hikelist {
   padding-top: 12;
   padding-left: 10;
+  padding-bottom: 16;
   column-width: 200px;
-  list-style-type: none;
 }
 
-.hikelist li {
+.hikelist div {
   font-size: 13.5px;
 }
 
@@ -112,11 +112,16 @@ a:link, a:visited {
 .hikelist .listhead {
   display: none;
   font-weight: bold;
-  margin-bottom: 8;
+  break-inside: avoid;
 }
 
-.hikelist li + .listhead {
+.hikelist div + .listhead {
   margin-top: 24;
+}
+
+.hikelist .listhead div {
+  margin-top: 8;
+  font-weight: normal;
 }
 
 #sortselector {
